2009-10-24 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* zlib-helper.c: stop trying to decompress when we get Z_STREAM_END.
	Patch by Ives Bastide. Fixes bug #549942.

2009-09-21 Leszek Ciesielski <skolima@gmail.com>

	* serial.c: return -1 from close() on error

2009-09-14  Jonathan Pryor  <jpryor@novell.com>

	* zlib-helper.c: support reverse callbacks within MonoTouch.

2009-09-09 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* zconf.h:
	* Makefile.am: attempt to fix the windows GCC build.

2009-09-02  Rodrigo Kumpera  <rkumpera@novell.com>

	* time.c (Mono_Posix_Syscall_nanosleep): Avoid referencing unitialized
	memory.

2009-08-23 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* deflate.c:
	* gzio.c:
	* deflate.h:
	* zutil.h:
	* crc32.c:
	* trees.c:
	* zconf.h:
	* inffast.c:
	* compress.c:
	* zlib.h:
	* inftrees.c:
	* inflate.c:
	* inflate.h:
	* adler32.c:
	* infback.c: updated to 1.2.3.3

2009-07-21 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* zlib-helper.c: use glib for malloc/free.

2009-07-21 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* zlib-helper.c: don't try to finish the z_stream if it has not been
	used. This fixes all the tests after the latest change.

2009-07-20 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* Makefile.am: replaced zlib_macros.c with zlib-helper.c
	* zlib_macros.c: Removed file.
	* zlib-helper.c: new interface for DeflateStream. Flush() actually
	does something.

2009-04-13  Jonathan Pryor  <jpryor@novell.com>

	* sys-time.c: Properly set the modification time, instead of using the
	  access time as the modification time.  Fixes #494253.

2009-03-20  Jonathan Pryor  <jpryor@novell.com>

	* x-struct-str.c: It's possible for struct members to be NULL, so make 
	  sure we don't pass NULL to strlen(3).

2009-02-20  Jonathan Pryor  <jpryor@novell.com>

	* map.h: Flush (adds Mono_Unix_UnixSignal_SignalInfo::pipecnt, removes
	  functions no longer declared within Mono.Posix.dll).